src/test/ui/compile-fail-migration/impl-trait/no-trait.stderr
error: at least one trait must be specified
  --> $DIR/no-trait.rs:11:11
   |
LL | fn f() -> impl 'static {} //~ ERROR at least one trait must be specified
   |           ^^^^^^^^^^^^

error: aborting due to previous error

